--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 
     <section class="menu">
         <nav>
-            <ul>
-                <li><a class="active" href="#home">Logo</a></li>
+          <ul class="celular-nav1">
+            <li><a class="active" href="#home">Logo</a></li>
                 <li><a href="#Categorias">Categorias</a></li>
                 <li><a href="#Proteinas">Proteinas</a></li>
                 <li><a href="#Creatina">Creatina</a></li>
                 <li><a href="#Vitaminas">Vitaminas</a></li>
                 <li><a href="#Acessórios">Acessórios</a></li>
                 <li><a href="#Pré-Treino">Pré-Treino</a></li>
-                <li>
-                    <div class="search-box">  
-                      <input type="text" class="search-text" placeholder="Pesquisar...">
-                      <a class="search-btn">
-                        <img src="assets/lupa.png" alt="">
-                      </a>
-                    </div>
-                </li>
-                <li><a href="#login"><img src="assets/login-image.png" alt="login"></a></li>
-                <li><a href="#carrinho"><img src="assets/cart.png" alt="carrinho"></a></li>
-              </ul>
+          </ul>
+          <ul class="celular-nav2">
+            <li>
+              <div class="search-box">  
+                <input type="text" class="search-text" placeholder="Pesquisar...">
+                <a class="search-btn"><img src="assets/lupa.png" alt=""></a>
+              </div>
+            </li>
+            <li><a href="login.html"><img src="assets/login-image.png" alt="login"></a></li>
+            <li><a href="#carrinho"><img src="assets/cart.png" alt="carrinho"></a></li>
+          </ul>
         </nav>
     </section>
 
