--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h3>Máximo Potencial Atlético, <br>Saúde & Bem-estar</h3>
-        <a href="../index.html">
+        <a href="index.html">
             <img src="assets/Logo.png" alt="Logo">
         </a>
         <div class="insta-div">
