--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
       </div>
       <div class="icons-layout">
         <div class="objetivo-btn">
-          <button><a href="-----------------"><img src="" alt="Massa Muscular"></a></button>
+          <button><a href="-----------------"><img src="assets/Muscle.png" alt="Massa Muscular"></a></button>
           <p>Massa Muscular</p>
         </div>
         <div class="objetivo-btn">
-          <button><a href="-----------------"><img src="" alt="Emagrecimento"></a></button>
+          <button><a href="-----------------"><img src="assets/Measuring tape.png" alt="Emagrecimento"></a></button>
           <p>Emagrecimento</p>
         </div>
         <div class="objetivo-btn">
-          <button><a href="-----------------"><img src="" alt="Qualidade de Vida"></a></button>
+          <button><a href="-----------------"><img src="assets/Heart.png" alt="Qualidade de Vida"></a></button>
           <p>Qualidade de Vida</p>
         </div>
         <div class="objetivo-btn">
-          <button><a href="-----------------"><img src="" alt="Energia"></a></button>
+          <button><a href="-----------------"><img src="assets/Energy.png" alt="Energia" class="btn-energy"></a></button>
           <p>Energia</p>
         </div>  
       </div>
