--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
     <link rel="stylesheet" href="css/style.css">
+    
     <title>Loja de Suplementos</title>
+    <link rel="shortcut icon" href="assets/icon.ico">
 </head>
 <body>
     <header>
