--- a/index.html
+++ b/index.html
@@ -124,17 +124,7 @@
 
     <section id="feedback">
       <h2>FeedBack de quem confia !</h2>
-      <div id="feedback-layout">
-        <div class="feedback-image">
-          <img src="" alt="feedback1">
-        </div>
-        <div class="feedback-image">
-          <img src="" alt="feedback2">
-        </div>
-        <div class="feedback-image">
-          <img src="" alt="feedback3">
-        </div>
-      </div>
+        <div id="feedback-layout"></div>
       <p>Não tem jeito! A honra é maxima, sempre! <br> Foco total naquilo que voce precisa.</p>
     </section>
 
@@ -165,29 +155,7 @@
     </section>
 
     <section id="instagram">
-      <div class="blog-titulo">
-        <h2>Nosso Blog</h2>
-        <button>Ver Mais +</button>
-      </div>
-      <div class="underline"></div>
-
-      <div class="instagram-layout">
-        <div class="instagram-image">
-          <img src="" alt="foto1">
-        </div>
-        <div class="instagram-image">
-          <img src="" alt="foto2">
-        </div>
-        <div class="instagram-image">
-          <img src="" alt="foto3">
-        </div>
-      </div>
-      <div class="follow">
-        <p>Nos siga tambem no instagram</p>
-        <div class="link-instagram">
-          <a href=""><img src="assets/instagram_icon_logo.png" alt="instagram"></a>
-        </div>
-      </div>
+      <iframe id="frame" width="100%" height="500px" style="background-color: #292c31;"  src="https://www.instagram.com/constanciasuplementos/embed" frameborder="0"></iframe>
     </section>
 
     <section id="Cadastro-email">
@@ -224,5 +192,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html> 
+
