--- a/pages/login.html
+++ b/pages/login.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Fonte red hat display-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;600;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/login.css">
-    <title>Register | TeamSuplementos</title>
+    <title>Login | TeamSuplementos</title>
 </head>
 <body>
     <header>
         <h3>Máximo Potencial Atlético, <br>Saúde & Bem-estar</h3>
-        <a href="index.html">
+        <a href="../index.html">
             <img src="assets/Logo.png" alt="Logo">
         </a>
         <div class="insta-div">
@@ -26,45 +25,37 @@
                     <h3>@TeamSuplementos</h3>
                 </a>
             </div>
-        </div>
+        </div>  
     </header>
 
-    <section class="register-screen">
-        <section class="main-register">
-            <h1>Fazer cadastro</h1>
+    <section class="login-screen">
+        <section class="main-login">
+            <h1>Fazer Login</h1>
             <div class="field">
                 <div class="textfield">
-                    <label for="name">Seu nome</label>
-                    <input type="text" name="name">
-                </div>
-                <div class="textfield">
-                    <label for="usuario">E-mail ou telefone</label>
+                    <label for="usuario">E-mail ou Telefone</label>
                     <input type="text" name="usuario">
                 </div>
                 <div class="textfield">
                     <label for="senha">Senha</label>
                     <input type="password" name="senha">
-                </div>
-                <div class="textfield">
-                    <label for="confirm_senha">Confirme sua senha</label>
-                    <input type="password" name="confirm_senha">
-                    <button class="btn-login">Registrar</button>
+                    <button class="btn-login">Entrar</button>
                 </div>
             </div>
         </section>
 
         <section class="divisoria">
             <img src="assets/Line 4.png" alt="">
-            <h3>Já é registrado ?</h3>
+            <h3>Novo por aqui ?</h3>
             <img src="assets/Line 4.png" alt="">
         </section>
 
-        <section class="login">
-            <p>Acesse sua conta !</p>
-            <button onclick="logar()">Fazer Login</button>
+        <section class="register">
+            <p>Venha fazer parte do time !</p>
+            <button onclick="tela_de_registro()">Registrar na Team Suplementos</button>
             <script>
-                function logar(){
-                    window.location.href="login.html";
+                function tela_de_registro(){
+                    window.location.href="register.html";
                 }
             </script>
         </section>
@@ -95,7 +86,6 @@
             </div>
         </div>
     </footer>
-
 
 </body>
 </html>
