--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
 
     <section class="menu">
         <nav>
+          <ul class="celular-nav0">
+            <li><a class="active" href="#home"><img src="assets/logo_constancia.png" alt="logo" style="width: 100px; height: 100px;"></a></li>
+          </ul>
           <ul class="celular-nav1">
-            <li><a class="active" href="#home">Logo</a></li>
-                <li><a href="#Categorias">Categorias</a></li>
-                <li><a href="#Proteinas">Proteinas</a></li>
-                <li><a href="#Creatina">Creatina</a></li>
-                <li><a href="#Vitaminas">Vitaminas</a></li>
-                <li><a href="#Acessórios">Acessórios</a></li>
-                <li><a href="#Pré-Treino">Pré-Treino</a></li>
+            <li><a href="#Categorias">Categorias</a></li>
+            <li><a href="#Proteinas">Proteinas</a></li>
+            <li><a href="#Creatina">Creatina</a></li>
+            <li><a href="#Vitaminas">Vitaminas</a></li>
+            <li><a href="#Acessórios">Acessórios</a></li>
+            <li><a href="#Pré-Treino">Pré-Treino</a></li>
           </ul>
           <ul class="celular-nav2">
             <li>
